this is the latest version

--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "dotenv": "^4.0.0",
     "fs": "0.0.1-security",
     "inquirer": "^5.0.0",
+    "node-spotify-api": "^1.0.7",
     "request": "^2.83.0",
     "spotify": "^0.3.0",
+    "spotify-data": "0.0.4",
     "twitter": "^1.7.1"
   }
 }
